# iota-streams-js

./: README.md  demo.js  package-lock.json  package.json
client/: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json  webpack.config.js
client/src/: lib.rs
lib/: index.js
native/: Cargo.toml
native/client/: Cargo.toml  package-lock.json
native/client/src/: lib.rs
native/src/: lib.rs
native/src/api_author/: announce.rs
native/src/messaging/: async_messaging.rs
